# findPlanes

./: .gitignore  CMakeLists.txt  carDataset.cpp  installDep.sh  main.cpp
datasets/buildings/: pointData1.csv  pointData2.csv
datasets/cars/: 20180807145028_lidar_frontcenter_000000091.npz
include/: Auxiliary.h  Line.h  Navigation.h  Point.h
src/: Auxiliary.cpp  Line.cpp  Navigation.cpp  Point.cpp
